Update to add distribution info to manifest, and to add a debug option to manifest as well. Debug can be turned on in the app config settings.